Changes to readme and colors style

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Exam</title>
+    <title>Oslo Auction and Bidding</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <div class="container">
-    <h1 class="heading">Exam</h1>
+    <h1 class="heading">Oslo Auction and Bidding</h1>
     <div class="main-content" id="root"></div>
 </div>
 
